parser/Mx_parserParser.py
# Generated from Mx_parser.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class Mx_parserParser ( Parser ):

    grammarFileName = "Mx_parser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "'class'", "'{'", "'}'", 
                     "','", "';'", "'='", "'if'", "'else'", "'while'", "'for'", 
                     "'return'", "'['", "']'", "'break'", "'continue'", 
                     "'?'", "':'", "'++'", "'--'", "'!'", "'~'", "'-'", 
                     "'.'", "'new'", "'&&'", "'||'", "'+='", "'-='", "'*='", 
                     "'/='", "'%='", "'<<='", "'>>='", "'&='", "'^='", "'|='", 
                     "'+'", "'*'", "'/'", "'%'", "'<<'", "'>>'", "'&'", 
                     "'^'", "'|'", "'<'", "'>'", "'<='", "'>='", "'=='", 
                     "'!='", "'int'", "'bool'", "'string'", "'void'", "'[]'", 
                     "'true'", "'false'", "'null'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "IDENTIFIER", "INTEGER_CONSTANT", 
                      "STRING_CONSTANT", "ESC", "LINE_COMMENT", "BLOCK_COMMENT", 
                      "WS" ]

    RULE_program = 0
    RULE_functionDefinition = 1
    RULE_classDefinition = 2
    RULE_globalVariableDeclaration = 3
    RULE_variableDeclaration = 4
    RULE_classMember = 5
    RULE_functionBody = 6
    RULE_statement = 7
    RULE_forControl = 8
    RULE_expression = 9
    RULE_assignmentExpression = 10
    RULE_logicOperator = 11
    RULE_assignmentOperator = 12
    RULE_arithmeticOperator = 13
    RULE_relationalOperator = 14
    RULE_parameterList = 15
    RULE_parameter = 16
    RULE_type = 17
    RULE_arrayType = 18
    RULE_returnType = 19
    RULE_constant = 20

    ruleNames =  [ "program", "functionDefinition", "classDefinition", "globalVariableDeclaration", 
                   "variableDeclaration", "classMember", "functionBody", 
                   "statement", "forControl", "expression", "assignmentExpression", 
                   "logicOperator", "assignmentOperator", "arithmeticOperator", 
                   "relationalOperator", "parameterList", "parameter", "type", 
                   "arrayType", "returnType", "constant" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    T__59=60
    T__60=61
    IDENTIFIER=62
    INTEGER_CONSTANT=63
    STRING_CONSTANT=64
    ESC=65
    LINE_COMMENT=66
    BLOCK_COMMENT=67
    WS=68

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(Mx_parserParser.EOF, 0)

        def functionDefinition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Mx_parserParser.FunctionDefinitionContext)
            else:
                return self.getTypedRuleContext(Mx_parserParser.FunctionDefinitionContext,i)


        def classDefinition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Mx_parserParser.ClassDefinitionContext)
            else:
                return self.getTypedRuleContext(Mx_parserParser.ClassDefinitionContext,i)


        def globalVariableDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Mx_parserParser.GlobalVariableDeclarationContext)
            else:
                return self.getTypedRuleContext(Mx_parserParser.GlobalVariableDeclarationContext,i)


        def getRuleIndex(self):
            return Mx_parserParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = Mx_parserParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4881901996069617672) != 0):
                self.state = 45
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 42
                    self.functionDefinition()
                    pass

                elif la_ == 2:
                    self.state = 43
                    self.classDefinition()
                    pass

                elif la_ == 3:
                    self.state = 44
                    self.globalVariableDeclaration()
                    pass


                self.state = 49
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 50
            self.match(Mx_parserParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def returnType(self):
            return self.getTypedRuleContext(Mx_parserParser.ReturnTypeContext,0)


        def IDENTIFIER(self):
            return self.getToken(Mx_parserParser.IDENTIFIER, 0)

        def functionBody(self):
            return self.getTypedRuleContext(Mx_parserParser.FunctionBodyContext,0)


        def parameterList(self):
            return self.getTypedRuleContext(Mx_parserParser.ParameterListContext,0)


        def getRuleIndex(self):
            return Mx_parserParser.RULE_functionDefinition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDefinition" ):
                listener.enterFunctionDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDefinition" ):
                listener.exitFunctionDefinition(self)




    def functionDefinition(self):

        localctx = Mx_parserParser.FunctionDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_functionDefinition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.returnType()
            self.state = 53
            self.match(Mx_parserParser.IDENTIFIER)
            self.state = 54
            self.match(Mx_parserParser.T__0)
            self.state = 56
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 4881901996069617664) != 0):
                self.state = 55
                self.parameterList()


            self.state = 58
            self.match(Mx_parserParser.T__1)
            self.state = 59
            self.functionBody()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(Mx_parserParser.IDENTIFIER, 0)

        def classMember(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Mx_parserParser.ClassMemberContext)
            else:
                return self.getTypedRuleContext(Mx_parserParser.ClassMemberContext,i)


        def getRuleIndex(self):
            return Mx_parserParser.RULE_classDefinition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassDefinition" ):
                listener.enterClassDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassDefinition" ):
                listener.exitClassDefinition(self)




    def classDefinition(self):

        localctx = Mx_parserParser.ClassDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_classDefinition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.match(Mx_parserParser.T__2)
            self.state = 62
            self.match(Mx_parserParser.IDENTIFIER)
            self.state = 63
            self.match(Mx_parserParser.T__3)
            self.state = 67
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4881901996069617664) != 0):
                self.state = 64
                self.classMember()
                self.state = 69
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 70
            self.match(Mx_parserParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GlobalVariableDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableDeclaration(self):
            return self.getTypedRuleContext(Mx_parserParser.VariableDeclarationContext,0)


        def getRuleIndex(self):
            return Mx_parserParser.RULE_globalVariableDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGlobalVariableDeclaration" ):
                listener.enterGlobalVariableDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGlobalVariableDeclaration" ):
                listener.exitGlobalVariableDeclaration(self)




    def globalVariableDeclaration(self):

        localctx = Mx_parserParser.GlobalVariableDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_globalVariableDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.variableDeclaration()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(Mx_parserParser.TypeContext,0)


        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(Mx_parserParser.IDENTIFIER)
            else:
                return self.getToken(Mx_parserParser.IDENTIFIER, i)

        def expression(self):
            return self.getTypedRuleContext(Mx_parserParser.ExpressionContext,0)


        def getRuleIndex(self):
            return Mx_parserParser.RULE_variableDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableDeclaration" ):
                listener.enterVariableDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableDeclaration" ):
                listener.exitVariableDeclaration(self)




    def variableDeclaration(self):

        localctx = Mx_parserParser.VariableDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_variableDeclaration)
        self._la = 0 # Token type
        try:
            self.state = 91
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 74
                self.type_(0)
                self.state = 75
                self.match(Mx_parserParser.IDENTIFIER)
                self.state = 80
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==6:
                    self.state = 76
                    self.match(Mx_parserParser.T__5)
                    self.state = 77
                    self.match(Mx_parserParser.IDENTIFIER)
                    self.state = 82
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 83
                self.match(Mx_parserParser.T__6)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 85
                self.type_(0)
                self.state = 86
                self.match(Mx_parserParser.IDENTIFIER)
                self.state = 87
                self.match(Mx_parserParser.T__7)
                self.state = 88
                self.expression(0)
                self.state = 89
                self.match(Mx_parserParser.T__6)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassMemberContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(Mx_parserParser.TypeContext,0)


        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(Mx_parserParser.IDENTIFIER)
            else:
                return self.getToken(Mx_parserParser.IDENTIFIER, i)

        def functionDefinition(self):
            return self.getTypedRuleContext(Mx_parserParser.FunctionDefinitionContext,0)


        def getRuleIndex(self):
            return Mx_parserParser.RULE_classMember

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassMember" ):
                listener.enterClassMember(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassMember" ):
                listener.exitClassMember(self)




    def classMember(self):

        localctx = Mx_parserParser.ClassMemberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_classMember)
        self._la = 0 # Token type
        try:
            self.state = 105
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 93
                self.type_(0)
                self.state = 94
                self.match(Mx_parserParser.IDENTIFIER)
                self.state = 99
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==6:
                    self.state = 95
                    self.match(Mx_parserParser.T__5)
                    self.state = 96
                    self.match(Mx_parserParser.IDENTIFIER)
                    self.state = 101
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 102
                self.match(Mx_parserParser.T__6)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 104
                self.functionDefinition()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Mx_parserParser.StatementContext)
            else:
                return self.getTypedRuleContext(Mx_parserParser.StatementContext,i)


        def getRuleIndex(self):
            return Mx_parserParser.RULE_functionBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionBody" ):
                listener.enterFunctionBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionBody" ):
                listener.exitFunctionBody(self)




    def functionBody(self):

        localctx = Mx_parserParser.FunctionBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_functionBody)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.match(Mx_parserParser.T__3)
            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((((_la - 1)) & ~0x3f) == 0 and ((1 << (_la - 1)) & -153122387280683703) != 0):
                self.state = 108
                self.statement()
                self.state = 113
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 114
            self.match(Mx_parserParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return Mx_parserParser.RULE_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class WhileStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a Mx_parserParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(Mx_parserParser.ExpressionContext,0)

        def statement(self):
            return self.getTypedRuleContext(Mx_parserParser.StatementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStatement" ):
                listener.enterWhileStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStatement" ):
                listener.exitWhileStatement(self)


    class EmptyStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a Mx_parserParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEmptyStatement" ):
                listener.enterEmptyStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEmptyStatement" ):
                listener.exitEmptyStatement(self)


    class ArrayAssignmentContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a Mx_parserParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IDENTIFIER(self):
            return self.getToken(Mx_parserParser.IDENTIFIER, 0)
        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Mx_parserParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(Mx_parserParser.ExpressionContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArrayAssignment" ):
                listener.enterArrayAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArrayAssignment" ):
                listener.exitArrayAssignment(self)


    class AssignmentContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a Mx_parserParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IDENTIFIER(self):
            return self.getToken(Mx_parserParser.IDENTIFIER, 0)
        def expression(self):
            return self.getTypedRuleContext(Mx_parserParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)


    class PrivatevariableDeclarationContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a Mx_parserParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def variableDeclaration(self):
            return self.getTypedRuleContext(Mx_parserParser.VariableDeclarationContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrivatevariableDeclaration" ):
                listener.enterPrivatevariableDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrivatevariableDeclaration" ):
                listener.exitPrivatevariableDeclaration(self)


    class ForStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a Mx_parserParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def forControl(self):
            return self.getTypedRuleContext(Mx_parserParser.ForControlContext,0)

        def statement(self):
            return self.getTypedRuleContext(Mx_parserParser.StatementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForStatement" ):
                listener.enterForStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForStatement" ):
                listener.exitForStatement(self)


    class BreakStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a Mx_parserParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBreakStatement" ):
                listener.enterBreakStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBreakStatement" ):
                listener.exitBreakStatement(self)


    class ExpressionStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a Mx_parserParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(Mx_parserParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressionStatement" ):
                listener.enterExpressionStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressionStatement" ):
                listener.exitExpressionStatement(self)


    class BlockContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a Mx_parserParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Mx_parserParser.StatementContext)
            else:
                return self.getTypedRuleContext(Mx_parserParser.StatementContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)


    class ContinueStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a Mx_parserParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterContinueStatement" ):
                listener.enterContinueStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitContinueStatement" ):
                listener.exitContinueStatement(self)


    class IfStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a Mx_parserParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(Mx_parserParser.ExpressionContext,0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Mx_parserParser.StatementContext)
            else:
                return self.getTypedRuleContext(Mx_parserParser.StatementContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStatement" ):
                listener.enterIfStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStatement" ):
                listener.exitIfStatement(self)


    class ReturnStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a Mx_parserParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(Mx_parserParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnStatement" ):
                listener.enterReturnStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnStatement" ):
                listener.exitReturnStatement(self)



    def statement(self):

        localctx = Mx_parserParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.state = 172
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                localctx = Mx_parserParser.EmptyStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 116
                self.match(Mx_parserParser.T__6)
                pass

            elif la_ == 2:
                localctx = Mx_parserParser.ExpressionStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 117
                self.expression(0)
                self.state = 118
                self.match(Mx_parserParser.T__6)
                pass

            elif la_ == 3:
                localctx = Mx_parserParser.IfStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 120
                self.match(Mx_parserParser.T__8)
                self.state = 121
                self.match(Mx_parserParser.T__0)
                self.state = 122
                self.expression(0)
                self.state = 123
                self.match(Mx_parserParser.T__1)
                self.state = 124
                self.statement()
                self.state = 127
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
                if la_ == 1:
                    self.state = 125
                    self.match(Mx_parserParser.T__9)
                    self.state = 126
                    self.statement()


                pass

            elif la_ == 4:
                localctx = Mx_parserParser.WhileStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 129
                self.match(Mx_parserParser.T__10)
                self.state = 130
                self.match(Mx_parserParser.T__0)
                self.state = 131
                self.expression(0)
                self.state = 132
                self.match(Mx_parserParser.T__1)
                self.state = 133
                self.statement()
                pass

            elif la_ == 5:
                localctx = Mx_parserParser.ForStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 135
                self.match(Mx_parserParser.T__11)
                self.state = 136
                self.match(Mx_parserParser.T__0)
                self.state = 137
                self.forControl()
                self.state = 138
                self.match(Mx_parserParser.T__1)
                self.state = 139
                self.statement()
                pass

            elif la_ == 6:
                localctx = Mx_parserParser.ReturnStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 141
                self.match(Mx_parserParser.T__12)
                self.state = 143
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if ((((_la - 1)) & ~0x3f) == 0 and ((1 << (_la - 1)) & -288230376101904383) != 0):
                    self.state = 142
                    self.expression(0)


                self.state = 145
                self.match(Mx_parserParser.T__6)
                pass
